--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commander": "^8.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint-plugin-import": "^2.25.2",
+    "lodash": "^4.17.21"
   }
 }
