--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,13 @@
+plugins:
+  - jest
 env:
   node: true
   es2020: true
 extends:
   - airbnb-base
+  - plugin:jest/recommended
 parserOptions:
-  ecmaVersion: 2020
+  ecmaVersion: 11
   sourceType: module
 rules:
   {
