--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --bail"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^25.2.2",
+    "jest": "^27.3.1"
   }
 }
