--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/arf1e/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/arf1e/frontend-project-lvl2/actions)",
-  "main": "index.js",
+  "main": "src/generateDifference.js",
   "type": "module",
   "scripts": {
     "test": "npx jest --bail"
